# naive-elfiee

./: .gitignore  .mcp.json  .prettierignore  .ts-nocheck  CLAUDE.md  GEMINI.md  MIGRATION_CHECK_REPORT.md  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  start-claude.sh  tailwind.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts
elfiee-ext-gen/: CHANGELOG.md  Cargo.toml  README.md
elfiee-ext-gen/docs/: extension-dev-quickstart.md  generator-dev-plan.md  generator-work-design.md  progress.md
elfiee-ext-gen/rules/: error_patterns.yaml  next_steps.yaml  test_dependencies.yaml
elfiee-ext-gen/src/: lib.rs  main.rs  test_support.rs
elfiee-ext-gen/src-tauri/src/extensions/todo/: DEVELOPMENT_GUIDE.md  mod.rs  tests.rs  todo_add_item.rs  todo_toggle_item.rs
elfiee-ext-gen/src/commands/: create.rs  guide.rs  mod.rs  validate.rs
elfiee-ext-gen/src/core/: analyzer.rs  generator.rs  guide_gen.rs  mod.rs  validator.rs
elfiee-ext-gen/src/models/: config.rs
elfiee-ext-gen/src/utils/: file_ops.rs  mod.rs  naming.rs
elfiee-ext-gen/templates/: DEVELOPMENT_GUIDE.md.tera  capability.rs.tera  mod.rs.tera  tests.rs.tera
elfiee-ext-gen/tests/: generator_outputs_test.rs  integration_test.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capability-macros/: Cargo.toml
src-tauri/capability-macros/src/: lib.rs
src-tauri/docs/guides/: EXTENSION_DEVELOPMENT.md
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/src/capabilities/: core.rs  file_sync.rs  file_sync_wrapper.rs  grants.rs  mod.rs  registry.rs
src-tauri/src/capabilities/builtins/: change_type.rs  create.rs  delete.rs  editor_create.rs  editor_delete.rs  grant.rs  link.rs  mod.rs  read.rs  rename.rs  revoke.rs  unlink.rs  update_metadata.rs
src-tauri/src/cli/: handler.rs  mod.rs  output.rs  parser.rs
src-tauri/src/commands/: agent.rs  block.rs  block_with_sync.rs  checkout.rs  editor.rs  event.rs  file.rs  mod.rs  reload.rs  terminal.rs  test.rs  tests.rs
src-tauri/src/elf/: archive.rs  mod.rs
src-tauri/src/engine/: actor.rs  event_store.rs  manager.rs  mod.rs  standalone.rs  state.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/extensions/agent/: agent_configure.rs  agent_create.rs  agent_disable.rs  agent_enable.rs  mod.rs  tests.rs
src-tauri/src/extensions/agent/context/: collector.rs  mod.rs  truncator.rs
src-tauri/src/extensions/code/: DEVELOPMENT_GUIDE.md  code_read.rs  code_write.rs  mod.rs  tests.rs
src-tauri/src/extensions/directory/: DEVELOPMENT_GUIDE.md  directory_create.rs  directory_delete.rs  directory_export.rs  directory_import.rs  directory_list.rs  directory_refresh.rs  directory_rename.rs  directory_rename_with_type_change.rs  directory_root.rs  directory_search.rs  directory_watch.rs  directory_write.rs  elf_meta.rs  mod.rs  tests.rs  utils.rs
src-tauri/src/extensions/markdown/: markdown_read.rs  markdown_write.rs  mod.rs
src-tauri/src/extensions/terminal/: DEVELOPMENT_GUIDE.md  commands.rs  mod.rs  permission.rs  pty.rs  pty_tests.rs  shell.rs  state.rs  terminal_close.rs  terminal_execute.rs  terminal_init.rs  terminal_read.rs  terminal_resize.rs  terminal_save.rs  terminal_save_test.rs  terminal_write.rs  tests.rs
src-tauri/src/ipc/: mod.rs  protocol.rs  registry.rs  server.rs
src-tauri/src/mcp/: dispatcher.rs  mod.rs  notifications.rs  peer_registry.rs  server.rs  standalone.rs  stdio_transport.rs  transport.rs
src-tauri/src/models/: block.rs  capability.rs  command.rs  editor.rs  event.rs  grant.rs  metadata.rs  mod.rs  payloads.rs
src-tauri/src/utils/: block_type_inference.rs  fs_scanner.rs  mcp_config.rs  mod.rs  path_validator.rs  pty.rs  snapshot.rs  time.rs
src-tauri/tests/: commands_block_permissions.rs  elf_meta_integration.rs  engine_block_dir_integration.rs  mcp_notifications_integration.rs  mcp_standalone_integration.rs  relation_integration.rs  security_tests.rs  snapshot_integration.rs  terminal_integration.rs
(+249 files in other folders)
