[workspace]
members = [".", "capability-macros"]

[package]
name = "elfiee"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "elfiee-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "elfiee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
zip = "0.6"
tempfile = "3.8"
walkdir = "2"
capability-macros = { path = "capability-macros" }
tokio = { version = "1.36", features = ["full"] }
dashmap = "5.5"
specta = { version = "=2.0.0-rc.22", features = ["serde_json", "chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
portable-pty = "0.8"
base64 = "0.21"
log = "0.4"
dirs = "5.0"
axum = "0.8"

# MCP (Model Context Protocol)
rmcp = { version = "0.5", features = ["server", "transport-sse-server", "transport-io"] }
schemars = "1"
async-trait = "0.1"
tokio-util = "0.7"

# GUI binary (Tauri app)
[[bin]]
name = "elfiee-app"
path = "src/main.rs"

